--- a/thing.css
+++ b/thing.css
@@ -1,7 +1,7 @@
 /**
- * @name gamesense theme
+ * @name cutesense theme
  * @version 1.3
- * @description Fixed gamesense theme
+ * @description Fixed cutesense theme
  * @author Xyhlo#2379
  * @socials This is my instagram be nice and leave a like or a comment: maxyiiiss
  * @fix Fixed broken elemements and updated most of the code if you find issues, do pull requests and I'll review them.
@@ -12,7 +12,7 @@
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css);
 
 /*-------------------------------*/
-/* gamesense theme by Xyhlo#2379 */
+/* cutesense theme by Xyhlo#2379 */
 /* 	     version:            */
 /*	       1.3	         */
 /*-------------------------------*/
@@ -1936,9 +1936,9 @@ border-color: transparent !important;
   background-color: transparent !important;
 }
 /** 
-* @name gamesense theme 
+* @name cutesense theme 
 * @version 1.2 
-* @description Fixed gamesense theme 
+* @description Fixed cutesense theme 
 * @author Xyhlo#9766 
 * @socials This is my instagram be nice and leave a like or a comment: maxyiiiss
 */
@@ -3768,7 +3768,7 @@ input,textarea{
 }
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css);
 /*-------------------------------*/
-/* gamesense theme by Xyhlo#2379 */
+/* cutesense theme by Xyhlo#2379 */
 /* 	     version:            */
 /*	       1.3	         */
 /*-------------------------------*/
@@ -5574,9 +5574,9 @@ border-color: transparent !important;
   background-color: transparent !important;
 }
 /** 
-* @name gamesense theme 
+* @name cutesense theme 
 * @version 1.2 
-* @description Fixed gamesense theme 
+* @description Fixed cutesense theme 
 * @author Xyhlo#9766 
 * @socials This is my instagram be nice and leave a like or a comment: maxyiiiss
 */
